refactor push
